# djangoproject

./: .gitignore  README.md  db.sqlite3  pyproject.toml
myapp/: forms.py  models.py  urls.py  views.py
myapp/migrations/: 0001_initial.py  0002_task.py  0003_task_done.py
myapp/static/styles/: main.css
myapp/templates/: about.html  create_task.html  index.html  projects.html  tasks.html
myapp/templates/layouts/: base.html  base2.html
myapp/templates/projects/: create_project.html  detail.html  projects.html
mysite/: settings.py  urls.py
