[project]
name = "djangoproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.4",
    "django-environ>=0.13.0",
    "mypy>=1.20.2",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.12",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.3",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.mypy_django_plugin]
django_settings_module = "mysite.settings"
